<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azulOscuro"
    tools:context=".RegisterFragment">

    <!-- Guidelines -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/EventosR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/inter"
        android:text="EventOs"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="372dp"
        android:layout_height="67dp"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@id/EventosR"
        android:gravity="center">

        <Button
            android:id="@+id/loginR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:text="@string/login_text"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/registerR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:text="@string/register_text"
            android:textColor="@color/naranja"
            android:textSize="18sp" />
    </LinearLayout>


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="228dp"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/person" />

    <EditText
        android:id="@+id/usernameInputR"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@+id/layout"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/white"
        android:hint="@string/username_hint"/>

    <ImageView
        android:id="@+id/emialR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@drawable/email" />

    <EditText
        android:id="@+id/emailInputR"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toEndOf="@+id/emialR"
        app:layout_constraintTop_toBottomOf="@+id/usernameInputR"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/white"
        android:hint="@string/email_hint"/>


    <ImageView
        android:id="@+id/lockR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/emialR"
        app:srcCompat="@drawable/lock_pass" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayoutR"
        android:layout_width="330dp"
        android:layout_height="67dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="42dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/lockR"
        app:layout_constraintTop_toBottomOf="@+id/emailInputR">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInputR"
            android:layout_width="326dp"
            android:layout_height="57dp"
            android:layout_marginTop="8dp"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <ImageView
        android:id="@+id/sLockR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/lockR"
        app:srcCompat="@drawable/lock_pass" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/repeatPasswordLayoutR"
        android:layout_width="330dp"
        android:layout_height="67dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="42dp"
        android:hint="@string/repeat_password_hint"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/sLockR"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputLayoutR">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repeatPasswordInputR"
            android:layout_width="326dp"
            android:layout_height="57dp"
            android:layout_marginTop="8dp"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonRegister"
        style="@style/botonlogin"
        android:layout_width="303dp"
        android:layout_height="50dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="33dp"
        android:fontFamily="@font/inter_light"
        android:text="@string/register_button"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/repeatPasswordLayoutR"
        android:textStyle="bold"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleR"
        style="@style/botonlogin"
        android:layout_width="345dp"
        android:layout_height="56dp"
        android:layout_marginTop="15dp"
        android:text="@string/register_with_google"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>